# MouseHunt

./: .env-template  .gitignore  Dockerfile  README.md  cv.py  driver.py  extended_driver.py  main.py  mousehunt.py  pyproject.toml  requirements.txt  setup.md  telegram_util.py  test.py  view.py
assets/data/: locations.txt  trap_classifications.txt
bot/: Dockerfile  requirements.txt
bot/src/: bot.py  bot_plus.py  main.py  settings.py  telebot.py
bot/src/data/: bait.txt  base.txt  scrape.py  trinket.txt  weapon.txt
bot/src/services/: captcha.py
captcha/: Dockerfile  docker-compose.yml  requirements.txt
captcha/app/: captcha_solver.py  image_utils.py  main.py
config/: __init__.py
data/: locations.txt  trap_classifications.txt
docker/: Dockerfile  run.sh  run_example.sh
driver/: __init__.py  cv.py  driver.py  exception.py
src/: bot.py  bot_plus.py  main.py  settings.py  telebot.py
src/clients/: captcha.py  game.py  telegram_bot.py
src/data/: scrape.py
src/models/: game.py
telebot/: __init__.py  bot_messager.py
util/: config.py  cv.py  driver.py  exception.py  telegram.py
